[project]
name = "sf-research-ai-exposure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "polars>=1.35.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = []
